Setup webpack.  Setup template.  Add client side rendering for react.  Add material-ui.

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Chat Thing</title>
-    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <div id="main"></div>
+    <div id="main">
+      
+    </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io.connect('http://localhost:8080');
-    </script>
+    <script type="text/javascript" src="js/bundle.js"></script>
+
   </body>
 </html>
