--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Cool Chat Thing</title>
   </head>
   <body>
-    <div id="main">
+    <div id="main" style="background-image: url(img/bg.jpg);">
       
     </div>
     <script src="/socket.io/socket.io.js"></script>
